<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/leg_zrbhq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gjj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/zrbhq_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shj"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/zrbhq_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shij"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/zrbhq_three"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xianj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/zrbhq_four"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leg_slgy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gjj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/slgy_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shj"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/slgy_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shij"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/slgy_three"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xianj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/slgy_four"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leg_shdgy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gjj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/shdgy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shj"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/sdgy_two"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leg_gylc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhcj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/gylc_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fcj"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/gylc_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhkj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/gylc_three"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fkj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/gylc_four"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guj"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/gylc_five"/>
    </LinearLayout>

</LinearLayout>