<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gyl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.ZrbhqActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/bhqgy_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back_white"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zrbhq"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <HorizontalScrollView
        android:id="@+id/hv_forestbase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:scrollbars="none">

        <RadioGroup
            android:id="@+id/radiogroup_forestbase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_gyzrbhq"
                style="@style/radiobutton"
                android:checked="true"
                android:text="@string/gyzrbhq" />

            <RadioButton
                android:id="@+id/rb_slgy"
                style="@style/radiobutton"
                android:text="@string/slgy" />

            <RadioButton
                android:id="@+id/rb_sdgy"
                style="@style/radiobutton"
                android:text="@string/sdgy" />

            <RadioButton
                android:id="@+id/rb_gylc"
                style="@style/radiobutton"
                android:text="@string/gylc" />

        </RadioGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/breakyellow"
            android:gravity="center|left"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:text="内容概括"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/zrbhq_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/legend"
                layout="@layout/legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.titan.vhtableview.VHTableView
                android:id="@+id/zrbhq_tabview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/zrbhq_webview"
                android:background="@color/gray"
                android:orientation="vertical" />
        </RelativeLayout>

    </ScrollView>

</LinearLayout>
