<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gyl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.ZmscActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/zmsc_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:background="@drawable/ic_back_white" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zmsc"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <HorizontalScrollView
        android:id="@+id/hv_forestbase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:scrollbars="none">

        <RadioGroup
            android:id="@+id/radiogroup_forestbase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_zmschj"
                style="@style/radiobutton"
                android:checked="true"
                android:text="@string/zmschj" />

            <RadioButton
                android:id="@+id/rb_lgm"
                style="@style/radiobutton"
                android:text="@string/lgm" />

            <RadioButton
                android:id="@+id/rb_rqm"
                style="@style/radiobutton"
                android:text="@string/rqm" />

            <RadioButton
                android:id="@+id/rb_lhm"
                style="@style/radiobutton"
                android:text="@string/lhm" />

        </RadioGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightyellow"
            android:drawableRight="@drawable/droparrow_down"
            android:gravity="center"
            android:padding="12dp"
            android:text="时间选择"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/breakyellow"
            android:gravity="center|left"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:text="内容概括"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/zmsc_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.titan.vhtableview.VHTableView
                android:id="@+id/zmsc_tabview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
